@@ -1,1 +1,1 @@
-4.0.0beta7
+4.0.0
