@@ -24,11 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v3.9.5.html">v3.9.5</a></td>
-    </tr>
-    <tr>
-      <th>Latest Development Release</th>
-      <td><a href="v4.0.0.html">v4.0.0beta7</a></td>
+      <td><a href="v4.0.0.html">v4.0.0</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -51,10 +47,10 @@
       <td><tt>export CVSROOT=:pserver:cvsanon@cvs.maptools.org:/cvs/maptools/cvsroot<br>
 	cvs login</tt><br>
 	(use empty password)<br>
-	<tt>cvs checkout -r branch-3-9 libtiff<br></tt>
-	to get stable libtiff branch, or<br>
-	<tt>cvs checkout libtiff</tt><br>
-	to get bleeding edge development version of libtiff from CVS HEAD.</td>
+	<tt>cvs checkout libtiff<br></tt>
+	to get the stable libtiff code or<br>
+	<tt>cvs checkout -r branch-3-9 libtiff</tt><br>
+	to get the previous stable branch supporting the 3.9.X release series.</td>
     </tr>
   </table>
   <hr>
@@ -121,7 +117,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2011-04-09 21:07:41 $.
+    Last updated  $Date: 2011-12-22 00:29:29 $.
   </p>
 </body>
 </html>
